--- a/FOnlineServer.cfg
+++ b/FOnlineServer.cfg
@@ -1,5 +1,5 @@
 # Window name
-WindowName=FOnline: Aftertimes
+WindowName=FOnline: New Dawn
 
 # Position of server window
 # 0, 0 - center of monitor
