--- a/UpdaterServer.cfg
+++ b/UpdaterServer.cfg
@@ -7,7 +7,7 @@ GameFileName     = FOnline
 UpdaterURL       = http://news.fonline-aftertimes.net/
 
 # Current game server (overwritten to client config)
-GameServer       = game.fonline-aftertimes.net
+GameServer       = 209.38.185.181
 GameServerPort   = 2238
 
 # Content to transfer
